FeatureSearch results: fix results being hidden if form is too long

--- a/plugins/style/FeatureSearch.css
+++ b/plugins/style/FeatureSearch.css
@@ -55,11 +55,6 @@ div.feature-search-bar > button > div.Spinner {
     margin-right: 1em;
 }
 
-div.feature-search-results {
-    flex: 1 1 auto;
-    overflow-y: auto;
-}
-
 div.feature-search-noresults {
     font-style: italic;
     padding: 0.25em;
